authenticate before action and add user to project

--- a/app/views/projects/index.html.slim
+++ b/app/views/projects/index.html.slim
@@ -1,7 +1,7 @@
 .row
   .col-md-6.col-md-offset-3
     .text-center
-      h1 Listing projects
+      h1 My projects
 
     table(class="table")
       thead
