--- a/app/views/projects/show.html.slim
+++ b/app/views/projects/show.html.slim
@@ -2,6 +2,11 @@
   .col-md-6.col-md-offset-3
     .text-center
       h2 Project #{@project.title}
-    .col-md-4.col-md-offset-4
-          => link_to "Edit", edit_project_path(@project), class: "btn btn-info"
-          =< link_to "Projects", projects_path, class: "btn btn-warning"
+    .text-right
+      => link_to "Edit", edit_project_path(@project), class: "btn btn-info"
+      =< link_to "Projects", projects_path, class: "btn btn-warning"
+.row
+  .col-md-6.col-md-offset-3
+    .text-center
+      h2 Tasks
+    = render "tasks/tasks_list"
