--- a/app/views/application/_navbar.html.slim
+++ b/app/views/application/_navbar.html.slim
@@ -6,7 +6,7 @@ nav.navbar.navbar-light(style="background-color: #F7F7F9;")
         span.icon-bar
         span.icon-bar
         span.icon-bar
-        = link_to "Project", root_path, :class => "navbar-brand"
+        = link_to "Project", root_path, class: "navbar-brand"
     #navbar.navbar-collapse.collapse
       ul.nav.navbar-nav
         li = link_to "Tasks manager", root_path
