--- a/app/views/tasks/show.html.slim
+++ b/app/views/tasks/show.html.slim
@@ -12,3 +12,10 @@
 
     => link_to "Edit", edit_task_path(@task), class: "btn btn-info"
     =< link_to "Back", tasks_path, class: "btn btn-warning"
+    hr/
+  .col-md-6.col-md-offset-3
+    h4 Comments
+    = render "comments/list"
+  .col-md-6.col-md-offset-3
+    h4 Create comment
+    = render "comments/form"
