--- a/app/views/application/_navbar.html.slim
+++ b/app/views/application/_navbar.html.slim
@@ -11,7 +11,9 @@ nav.navbar.navbar-light(style="background-color: #F7F7F9;")
       ul.nav.navbar-nav
         li = link_to "Tasks manager", root_path
         li = link_to "My projects", projects_path
-        li= link_to "My tasks", tasks_path
+        li = link_to "My tasks", tasks_path
+        - if administrator?
+          li = link_to "Admin panel", rails_admin.dashboard_path
       ul.nav.navbar-nav.navbar-right
         - if user_signed_in?
           li = link_to "Sign out", destroy_user_session_path, method: :delete
